--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,14 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+# Unity & Rider/VS generated files
+Library/
+UserSettings/
+obj/
+.idea/
+# Unityの一時フォルダ
+Temp/
+
+# バックアップファイル
+*.bak
